[frontend]: Fix spacing of Statistics page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,6 +95,8 @@ body, html, #root {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  background-color: white;
+  overflow-x: hidden;
 }
 
 .leaflet-marker-icon {
